2013-03-19  Guillaume Lazzara  <z@lrde.epita.fr>

	Remove last references to mln::trace::*.

	* demo/xml2doc/main.cc,
	* scribo/make/debug_filename.hh,
	* scribo/primitive/identify.hh,
	* src/afp/regroup.hh,
	* src/misc/negate.cc,
	* src/misc/superpose.cc,
	* src/preprocessing/split_bg_fg.cc,
	* src/preprocessing/unskew.cc: Here.

2013-03-15  Guillaume Lazzara  <z@lrde.epita.fr>

	Make use of mln_trace.

	* scribo/binarization/global_threshold.hh,
	* scribo/binarization/global_threshold_auto.hh,
	* scribo/binarization/internal/local_threshold_core.hh,
	* scribo/binarization/kim.hh,
	* scribo/binarization/local_threshold.hh,
	* scribo/binarization/niblack.hh,
	* scribo/binarization/niblack_fast.hh,
	* scribo/binarization/niblack_threshold.hh,
	* scribo/binarization/otsu.hh,
	* scribo/binarization/otsu_threshold.hh,
	* scribo/binarization/sauvola.hh,
	* scribo/binarization/sauvola_ms.hh,
	* scribo/binarization/sauvola_ms_split.hh,
	* scribo/binarization/sauvola_threshold.hh,
	* scribo/binarization/singh.hh,
	* scribo/binarization/wolf.hh,
	* scribo/binarization/wolf_fast.hh,
	* scribo/convert/from_base64.hh,
	* scribo/convert/to_base64.hh,
	* scribo/core/central_sites.hh,
	* scribo/core/erase_objects.hh,
	* scribo/core/init_integral_image.hh,
	* scribo/debug/alignment_decision_image.hh,
	* scribo/debug/bboxes_enlarged_image.hh,
	* scribo/debug/bboxes_image.hh,
	* scribo/debug/char_space_image.hh,
	* scribo/debug/decision_image.hh,
	* scribo/debug/highlight_text_area.hh,
	* scribo/debug/line_info_image.hh,
	* scribo/debug/linked_bboxes_image.hh,
	* scribo/debug/links_decision_image.hh,
	* scribo/debug/links_image.hh,
	* scribo/debug/looks_like_a_text_line_image.hh,
	* scribo/debug/mean_and_base_lines_image.hh,
	* scribo/debug/save_comp_diff.hh,
	* scribo/debug/save_label_image.hh,
	* scribo/debug/save_table_image.hh,
	* scribo/debug/text_areas_image.hh,
	* scribo/draw/bounding_box_links.hh,
	* scribo/draw/bounding_boxes.hh,
	* scribo/draw/groups_bboxes.hh,